Add cosmetic fixes to html pages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -197,8 +197,8 @@ saveInternalDispatchFormTitle=Save Internal Dispatch
 updateInternalDispatchFormTitle=Update Internal Dispatch
 internalDispatchCard=Internal dispatch card
 isAlbum=Is Album
-internalHandlerName=Internal handler name
-internalHandlerPhoneNumber=Internal handler phone number
+internalHandlerName=Handler name
+internalHandlerPhoneNumber=Handler phone number
 NotNull.internalDispatch.isAlbum="Is album" mark must not be empty
 NotBlank.internalDispatch.waybill=Waybill must not be blank
 NotNull.internalDispatch.dispatchDate=Dispatch date must not be empty
@@ -264,7 +264,7 @@ department=Department
 userName=User name
 notRegistered=User with such email not registered
 emailSent=You should receive an Password Reset Email shortly
-changePassword=Change password
+changePassword=Ch. password
 notMatches=Passwords do not match
 banned=Banned
 nonBanned=OK
@@ -287,6 +287,7 @@ internalSubscribers=Internal subscribers
 separately=Separately
 withIncomings=With inc.
 albumWithIncomings=Album with inc.
+albums=Albums
 
 
 
