--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -61,7 +61,7 @@ addressee=Адресат
 dispatchType=Тип рассылки
 album=Альбом
 scattered=Россыпь
-albumDecimalNumber=Децимальный номер альбома
+albumDecimalNumber=Децим-й номер альбома
 currentHandler=Текущий держатель
 handlerName=ФИО держателя
 handlerPhoneNumber=Телефон держателя
@@ -197,8 +197,8 @@ saveInternalDispatchFormTitle=Создать внутреннюю рассылк
 updateInternalDispatchFormTitle=Изменить внутреннюю рассылку
 internalDispatchCard=Карточка внутренней рассылки
 isAlbum=Является альбомом
-internalHandlerName=Имя абонента
-internalHandlerPhoneNumber=Телефонный номер абонента
+internalHandlerName=Имя держателя
+internalHandlerPhoneNumber=Тел. номер держателя
 NotNull.internalDispatch.isAlbum=Пометка "Является альбомом" не должна быть пустая
 NotBlank.internalDispatch.waybill=Номер накладной не должен быть пустым
 NotNull.internalDispatch.dispatchDate=Дата отправки не должна быть пустой
@@ -264,7 +264,7 @@ department=Отдел
 userName=Имя пользователя
 notRegistered=Пользователь с таким email не зарегистрирован
 emailSent=Вскоре вы должны получить письмо для сброса пароля
-changePassword=Изменить пароль
+changePassword=Изм. пароль
 notMatches=Пароли не совпадают
 banned=Заблокирован
 nonBanned=OК
@@ -287,6 +287,8 @@ internalSubscribers=Внутренние абоненты
 separately=Отдельно
 withIncomings=С входящ.
 albumWithIncomings=Альбом с вх.
+albums=Альбомы
+
 
 
 
