Add cosmetic fixes to html pages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -288,8 +288,11 @@ separately=Separately
 withIncomings=With inc.
 albumWithIncomings=Album with inc.
 albums=Albums
-
-
+addFileError.fileShouldNotBeEmpty=You must choose a file
+addFileError.fileShouldHavePdfType=File should be pdf
+changeNumberRequired=Change number required
+changeNumberExist=Number already exists
+changePasswordForUser=Change user password
 
 
 
