--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -288,6 +288,13 @@ separately=Отдельно
 withIncomings=С входящ.
 albumWithIncomings=Альбом с вх.
 albums=Альбомы
+addFileError.fileShouldNotBeEmpty=Вы должны выбрать файл
+addFileError.fileShouldHavePdfType=Файл должен быть pdf
+changeNumberRequired=Требуется номер изменения
+changeNumberExist=Номер уже существует
+changePasswordForUser=Изменить пароль пользователя
+
+
 
 
 
