Add i18n to error messages on loginPage.html

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -293,6 +293,9 @@ addFileError.fileShouldHavePdfType=File should be pdf
 changeNumberRequired=Change number required
 changeNumberExist=Number already exists
 changePasswordForUser=Change user password
+badCredentials=Invalid username and password.
+accountLocked=User account is locked.
+changePasswordFull=Change password
 
 
 
