--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -293,6 +293,11 @@ addFileError.fileShouldHavePdfType=Файл должен быть pdf
 changeNumberRequired=Требуется номер изменения
 changeNumberExist=Номер уже существует
 changePasswordForUser=Изменить пароль пользователя
+badCredentials=Неверные email и пароль.
+accountLocked=Аккаунт заблокирован.
+changePasswordFull=Изменить пароль
+
+
 
 
 
