Add i18n to user role text

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -296,6 +296,12 @@ changePasswordForUser=Изменить пароль пользователя
 badCredentials=Неверные email и пароль.
 accountLocked=Аккаунт заблокирован.
 changePasswordFull=Изменить пароль
+accessDeniedMessage=В доступе отказано!
+role.ROLE_ADMIN=Администратор
+role.ROLE_USER=Пользователь
+role.ROLE_OTD_WORKER=Работник ОТД
+
+
 
 
 
