--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -296,7 +296,10 @@ changePasswordForUser=Change user password
 badCredentials=Invalid username and password.
 accountLocked=User account is locked.
 changePasswordFull=Change password
-
+accessDeniedMessage=Access denied!
+role.ROLE_ADMIN=Administrator
+role.ROLE_USER=User
+role.ROLE_OTD_WORKER=DoTD worker
 
 
 
