Add custom whitelabel error page; Add global exception handling

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -300,7 +300,9 @@ accessDeniedMessage=Access denied!
 role.ROLE_ADMIN=Administrator
 role.ROLE_USER=User
 role.ROLE_OTD_WORKER=DoTD worker
-
+error=Error
+notFoundMessage=Not found entity with these parameters
+pageNotExist=Page not exist!
 
 
 
