--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -300,6 +300,11 @@ accessDeniedMessage=В доступе отказано!
 role.ROLE_ADMIN=Администратор
 role.ROLE_USER=Пользователь
 role.ROLE_OTD_WORKER=Работник ОТД
+error=Ошибка
+notFoundMessage=Не найдена сущность с такими параметрами
+pageNotExist=Страница не существует!
+
+
 
 
 
